--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         await micropip.install('pygame')
 
-        import suikagame  # ゲームのPythonファイルをインポート
+        import suikagame.py  # ゲームのPythonファイルをインポート
 
         pygame.init()
 
